--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -8,16 +8,16 @@
     <android.support.v7.widget.CardView
         android:id="@+id/txt_vp_item_list"
         android:layout_width="match_parent"
-        android:layout_height="210dp"
+        android:layout_height="220dp"
         android:clickable="true"
         android:padding="30dp"
         android:foreground="?android:attr/selectableItemBackground"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="15dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="1sp"
         android:background="#fff"
         android:gravity="center"
         android:text="Item"
