--- a/app/src/main/res/layout/total_sheet.xml
+++ b/app/src/main/res/layout/total_sheet.xml
@@ -17,7 +17,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:id="@+id/transitionContainer"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:orientation="horizontal"
         android:layout_gravity="center_vertical"
         android:weightSum="5">
@@ -34,7 +34,8 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:layout_width="0dp"
@@ -44,12 +45,13 @@
             android:layout_marginRight="32dp"
             android:layout_marginBottom="8dp"
             android:gravity="right"
-            android:text="₱1000.00"
+            android:text="₱4540.00"
             android:textSize="15dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_expand"
-            app:layout_constraintTop_toTopOf="parent"></TextView>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"></TextView>
 
         <ImageButton
             android:id="@+id/button_expand"
@@ -58,7 +60,6 @@
             android:layout_height="15dp"
 
 
-            android:layout_marginTop="4dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/ic_up_arrow"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -72,12 +73,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Glass Shoe 1x2" />
+        android:text="Diamond Ring 1x2" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pumpkin Carriage 1x1" />
+        android:text="Blazer 1x1" />
 
     <Button
         android:layout_width="match_parent"
